perf(liteloader): improve dirs and sync liteloader 1.3.0

--- a/LiteLoaderQQNT/package.json
+++ b/LiteLoaderQQNT/package.json
@@ -17,7 +17,9 @@
     "directory": "LiteLoaderQQNT"
   },
   "types": "index.d.ts",
+  "main": "index.d.ts",
   "exports": {
+    ".": "./index.d.ts",
     "./jsconfig": "./jsconfig.json"
   }
 }
