--- a/LiteLoaderQQNT/package.json
+++ b/LiteLoaderQQNT/package.json
@@ -19,7 +19,6 @@
   "types": "index.d.ts",
   "main": "index.d.ts",
   "exports": {
-    ".": "./index.d.ts",
-    "./jsconfig": "./jsconfig.json"
+    ".": "./index.d.ts"
   }
 }
