--- a/LiteLoaderQQNT/package.json
+++ b/LiteLoaderQQNT/package.json
@@ -1,15 +1,17 @@
 {
   "name": "@llqqntuno/liteloader-types",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "The unofficial TypeScript definitions of LiteLoaderQQNT",
   "author": "llqqntuno",
   "contributors": [
     {"name": "晚梦", "url": "https://about.latedream.cn"}
   ],
   "license": "MIT",
+  "peerDependencies": {
+    "@types/node": "*"
+  },
   "optionalDependencies": {
-    "liteloader-qqnt": "~1.2.2",
-    "llqqnt-unofficial": "~1.2.3+uno.2"
+    "liteloader-qqnt": "~1.3.0"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,8 @@
   "types": "index.d.ts",
   "main": "index.d.ts",
   "exports": {
-    ".": "./index.d.ts"
+    ".": "./index.d.ts",
+    "./main": "./main.d.ts",
+    "./preload": "./preload.d.ts"
   }
 }
