--- a/.github/workflows/publish_all.yml
+++ b/.github/workflows/publish_all.yml
@@ -1,9 +1,14 @@
 name: Publish All
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
+  workflow_dispatch:
+
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
 
 jobs:
   publish:
@@ -16,8 +21,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22.x"
+          node-version: lts/*
           registry-url: "https://registry.npmjs.org/"
+
+      # Ensure npm 11.5.1 or later is installed
+      - name: Update npm
+        run: npm install -g npm@latest
 
       - name: Publish each package
         env:
@@ -27,7 +36,6 @@ jobs:
             if [ -f "$dir/package.json" ]; then
               echo "📦 Publishing $dir"
               cd "$dir"
-              npm install
               npm publish --access public || echo "⚠️ Failed to publish $dir"
               cd ..
             else
